--- a/task-13-food-dashboard/app/views/food-list.html
+++ b/task-13-food-dashboard/app/views/food-list.html
@@ -161,7 +161,10 @@
           </div>
 
           <div class="table-responsive foodTable">
-            <table class="table table-striped table-sm">
+            <table
+              class="table table-striped table-sm"
+              style="text-align: center"
+            >
               <thead>
                 <tr class="bg-warning text-white">
                   <th>ID</th>
@@ -222,6 +225,7 @@
                     placeholder="Nhập ID"
                     value=""
                     required
+                    disabled
                   />
                   <div id="invalidID" class="invalid-feedback"></div>
                 </div>
@@ -292,7 +296,7 @@
                 <div class="form-group">
                   <label for="hinhMon">Hình Món Ăn</label>
                   <input
-                    type="text"
+                    type="file"
                     class="form-control"
                     id="hinhMon"
                     placeholder="Nhập hình ảnh"
@@ -317,16 +321,28 @@
             >
               Close
             </button>
-            <button type="button" class="btn btn-warning" id="btnCapNhat">
+            <button
+              type="button"
+              class="btn btn-warning"
+              id="btnCapNhat"
+              onclick="editItem()"
+            >
               Cập Nhật
             </button>
-            <button type="button" class="btn btn-warning" id="btnThemMon">
+            <button
+              type="button"
+              class="btn btn-warning"
+              id="btnThemMon"
+              onclick="addItem()"
+            >
               Thêm
             </button>
           </div>
         </div>
       </div>
     </div>
+
+    <!-- LIBRARY -->
     <script src="../../assets/lib/js/Jquery/jquery-3.5.1.slim.min.js"></script>
     <script src="../../assets/lib/js/bootstrap/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
